# pallet-generic-asset

./: Cargo.toml
src/: lib.rs  mock.rs
